# LEVVIF

./: .gitignore  CLAUDE.md  README.md
app/routes/: auth.py  chat.py  guest.py  history.py  phenoage.py
backend/: .env.example  main.py  pyproject.toml
backend/app/: config.py  main.py
backend/app/routes/: chat.py  guest.py  upload.py
backend/app/services/: gemini.py  mem0.py  ml_service.py  phenoage.py
backend/tests/: test_phenoage.py
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/about/: page.tsx
frontend/src/app/calculate/: page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/history/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/app/upload/: page.tsx
frontend/src/components/: hud-corners.tsx  navbar.tsx
frontend/src/lib/: api.ts  auth.tsx
ml/: README.md  pyproject.toml
ml/notebooks/: 01_explore.ipynb  02_train.ipynb
