[project]
name = "lewif"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "email-validator>=2.3.0",
    "fastapi>=0.138.0",
    "google-genai>=2.9.0",
    "groq>=1.5.0",
    "mem0ai>=2.0.7",
    "pydantic-settings>=2.14.2",
    "python-multipart>=0.0.32",
    "supabase>=2.31.0",
    "uvicorn>=0.49.0",
]
