[project]
name = "ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.11.0",
    "pandas>=3.0.3",
    "pyreadstat>=1.3.5",
    "scikit-learn>=1.9.0",
    "seaborn>=0.13.2",
    "xgboost>=3.3.0",
]
